# imageproc

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: cli.hpp  command.hpp  exceptions.hpp  filters.hpp  image.hpp  parser.hpp  pixelwindow.hpp
src/: cli.cpp  command.cpp  filters.cpp  filters.hpp  io.cpp  io.hpp  main.cpp  parser.cpp  pixelwindow.cpp
src/filters/: negative.cpp  negative.hpp
tests/: test_main.cpp  test_pixelwindow.cpp  tests.cpp
